replace system.log.in -> cpw.mods.fml.FMLLog.info, off replace item bell, substitutions dont(?) normal work, registry item bell, part code of https://github.com/Hoborific/ThaumicHorizons/commit/6ba21c8865ba1009169c7b2e3a3c2839df386331

--- a/src/main/resources/assets/thaumichorizons/lang/en_US.lang
+++ b/src/main/resources/assets/thaumichorizons/lang/en_US.lang
@@ -152,7 +152,7 @@ item.focusIllumination.15.name=Wand Focus: Illumination (White)
 item.focusAnimation.name=Wand Focus: Animation
 item.golemPowder.name=Golem Animation Powder
 item.golemPlacer.name=Animated Golem
-item.GolemBell.name=Golemancer's Bell
+item.GolemBellTH.name=Golemancer's Bell
 item.boatGreatwood.name=Greatwood Boat
 item.boatThaumium.name=Thaumium Boat
 item.conduit.name=Planar Conduit
